force-app/main/default/objects/Comprador__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Compradores</relationshipLabel>
    <relationshipName>Compradores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>