force-app/main/default/objects/Comprador__c/fields/Papel__c.field-meta.xml
<CustomField>
    <fullName>Papel__c</fullName>
    <label>Papel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
                <default>true</default>
                <label>Comprador</label>
            </value>
            <value>
                <fullName>Co-comprador</fullName>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>